--- a/user.html
+++ b/user.html
@@ -1,11 +1,14 @@
 <html>
 <head>
   <meta charset="UTF-8">
+  <!-- <meta name='num' content='{{num}}'> -->
 
   <!-- PLEASE NO CHANGES BELOW THIS LINE (UNTIL I SAY SO) -->
   <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
   <script language="javascript" type="text/javascript" src="user.js"></script>
   <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
+<!--   <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
+  <script src="https://code.jquery.com/jquery-1.11.1.js"></script> -->
 
   <!-- This line removes any default padding and style. 
        You might only need one of these values set. -->
